@@ -6,6 +6,8 @@ cdebconf (0.127) UNRELEASED; urgency=low
   [ Jérémy Bobbio ]
   * Correctly handle click on the "Cancel" button during progress operations
     in the GTK+ frontend.  (Closes: #453703)
+  * Force cursor to stay on the first column during multiselect questions in
+    the GTK+ frontend.  (Closes: #398902)
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 22 Jan 2008 15:44:34 +0000
 
